--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@concide/stock-scraper": "^1.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
+    "google-finance-data": "0.0.5",
+    "ng4-loading-spinner": "^1.2.3",
     "ngx-auth": "^5.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
