--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "src/assets/vendor/bootstrap/css/bootstrap.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/vendor/aos.css"
             ],
             "scripts": []
           },
